fix: fix add habit modal overlapping with nav

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -56,6 +56,12 @@ p {
   flex-direction: column;
   &__title {
     @include subtitle(white);
+    &--add-habit {
+      @include maintitle;
+      @include tablet {
+        align-self: center;
+      }
+    }
   }
   & label {
     margin: 0.5rem 0;
